# utility-tracker-app

./: .gitignore  Dockerfile  README.md  SETUP.md  docker-compose.yml  prompt-card.html  pyproject.toml  requirements.txt
backend/: config.py  main.py  mcp_server_http.py  redis_client.py
backend/agents/: email_pipeline.py  notify_subgraph.py
backend/auth/: middleware.py  oauth.py
backend/notifications/: email.py  macos_pub.py  push.py  websocket.py
backend/routers/: admin.py  auth.py  payments.py  rules.py
backend/scheduler/: jobs.py
backend/webhook/: gmail.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: sw.js
frontend/src/: AdminDashboard.jsx  App.jsx  Dashboard.jsx  Login.jsx  Settings.jsx  api.js
frontend/src/components/: NotificationToast.jsx  PaymentCard.jsx  RuleRow.jsx  StatCard.jsx
notifier/: daemon.py  install.py
