[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "utility-tracker"
version = "0.1.0"
description = "Agentic household utility payment tracker powered by Claude and LangGraph"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # Redis
    "redis[hiredis]>=5.0.0",

    # LangChain / LangGraph / LangSmith
    "langchain>=0.2.0",
    "langgraph>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langsmith>=0.1.0",
    "langchain-core>=0.2.0",

    # Google Auth & Gmail API
    "google-auth>=2.29.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.126.0",

    # Auth / JWT
    "python-jose[cryptography]>=3.3.0",

    # Scheduling
    "APScheduler>=3.10.4",
    "pytz>=2024.1",

    # Web Push (browser + macOS via VAPID)
    "pywebpush>=2.0.0",

    # Config & validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",

    # HTTP client (used internally)
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",        # TestClient transport
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
